--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.ts"
+    "start": "nodemon src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.11",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.1.0",
@@ -33,7 +35,7 @@
     "express-sessions": "^1.0.6",
     "http-errors": "^2.0.0",
     "mongoose": "^7.2.2",
-    "morgan": "^1.10.0"
-    
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5"
   }
 }
