--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "start": "nodemon src/server.ts",
     "build": "tsc"
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
