--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts",
-    "start": "node src/server.ts",
+    "start": "nodemon src/server.ts",
+    
     "build": "tsc"
   },
   "engines": {
