--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/server.ts",
-    
     "build": "tsc"
   },
   "engines": {
@@ -20,6 +19,7 @@
     "@types/express": "^4.17.18",
     "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
@@ -40,6 +40,7 @@
     "express-session": "^1.17.3",
     "express-sessions": "^1.0.6",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5"
